Cinnplified/cinnamon/cinnamon.css
#panel {  
  color: white;
  border-image: url('assets/panel.png') 8; }

#panelLeft .applet-box:first-child:hover, #panelLeft .applet-box:first-child:active {
  padding-left: 6px;
  padding-right: 6px;
  border-image: url('assets/tray-pressed.png') 8; }

#panelRight .applet-box:hover {
  padding: 6px;
  border-image: url('assets/tray-pressed.png') 8; }

.window-list-box {
  padding: 0px;
  spacing: 1px; }

.window-list-item-label {
  font-weight: normal;
  width: 15em;
  padding-left: 0px;
  padding-right: 0px;
  min-width: 5px; }

.window-list-item-box {
  background: transparent;
  transition-duration: 200;
  color: #FFF;
  max-width: 134px; }

.window-list-item-box {
  font-weight: normal;
  font-size: 9pt;
  border-image: url("panel-assets/item-normal.png") 4; }

.window-list-item-box:hover  {
  border-image:url("panel-assets/item-hover.png") 4; }

.window-list-item-box:active, .window-list-item-box:checked, .window-list-item-box:focus  {
  border-image: url("panel-assets/item-active.png") 4; }

.window-list-item-box:checked:hover, .window-list-item-box:focus:hover, .window-list-item-box:active:hover  {
  border-image: url("panel-assets/item-active-hover.png") 4; }

.window-list-item-demands-attention {
  border-image: url("panel-assets/item-attention.png") 4; }

.window-list-item-demands-attention:hover {
  border-image: url("panel-assets/item-attention-hover.png") 4; }

.grouped-window-list-item-box {
  padding-bottom: 1px; }

.grouped-window-list-item-box:hover {
  padding-bottom: 1px;
  border-image: url('assets/tray-pressed.png') 4; }

.grouped-window-list-item-box:active, .grouped-window-list-item-box:checked, .grouped-window-list-thumbnail-menu {
  color: white;
  border-image: url('assets/item-normal.png') 4; }

.grouped-window-list-item-box:active:hover, .grouped-window-list-item-box:checked:hover, {
  border-image: url('assets/item-hover.png') 4; }

.grouped-window-list-item-box:focus, {
  padding-bottom: 1px;
  border-image: url('assets/item-active.png') 4; }

.grouped-window-list-item-box:focus:hover, .grouped-window-list-thumbnail-menu .item-box:selected {
  color: #303036;
  border-image: url('assets/item-active-hover.png') 4; }

.grouped-window-list-item-demands-attention {
  font-weight: normal;
  border-image: url('assets/item-attention.png') 4; }

.grouped-window-list-item-attention:hover {
  border-image: url('assets/item-attention-hover.png') 4; }

.applet-cornerbar {
  padding: 4px;
  margin-top: 2px;
  border: 1px solid grey;
  border-radius: 1px;
  background-gradient-start: rgba(255,255,255,0.3);
  background-gradient-end: rgba(255,255,255,0.1);
  background-gradient-direction: vertical; }

.applet-cornerbar-box:hover > .applet-cornerbar {
  opacity: 50%;
  border: 1px solid rgba(255,255,255,0.7);
  background-gradient-start: rgba(255,255,255,0.6);
  background-gradient-end: rgba(255,255,255,0.4);
  background-gradient-direction: vertical; }

.toggle-switch {
  width: 52px;
  height: 18px; }

.toggle-switch-us, .toggle-switch-intl {
  background-image: url('assets/switch-off.svg'); }

.toggle-switch-us:checked, .toggle-switch-intl:checked {
  background-image: url('assets/switch-on.svg'); }

#Tooltip {
  color: white;
  padding: 2px 12px;
  background-gradient-start: #4b4b4b;
  background-gradient-end: #2b2b2b;
  background-gradient-direction: vertical;
  border: 1px solid grey; }

.popup-menu-content {  
  color: white;
  background-color: transparent;
  background-gradient-start: #4b4b4b;
  background-gradient-end: #2b2b2b;
  background-gradient-direction: vertical;
  border-radius: 4px;
  border: 1px solid grey; }

.appmenu-sidebar {
  padding: 10px 5px 10px 5px;
  background-color: rgba(255,255,255,0.1); }

.appmenu-system-button {
  padding: .5em;
  border: 1px solid grey;
  border-radius: 4px;
  background-gradient-start: rgba(255,255,255,0.2);
  background-gradient-end: rgba(255,255,255,0.1);
  background-gradient-direction: vertical; }

.appmenu-system-button:hover {
  border: 1px solid rgba(255,255,255,0.5);
  background-gradient-start: rgba(255,255,255,0.5);
  background-gradient-end: rgba(255,255,255,0.2);
  background-gradient-direction: vertical; }

.appmenu-system-button-shutdown {
  background-gradient-start: #f03e4a;
  background-gradient-end: #c01c28;
  background-gradient-direction: vertical; }

.appmenu-system-button-shutdown:hover {
  background-gradient-start: #C16D6D;
  background-gradient-end: #f03e4a;
  background-gradient-direction: vertical; }

.menu-favorites-box {
  color: white;
  background-color: rgba(255,255,255,0.1);
  border-radius: 4px;
  border: 1px solid grey; }

#appmenu-search-entry, #appmenu-search-entry:hover, #appmenu-search-entry:focus {  
  padding: 7px 7px;
  background-color: rgba(255,255,255,0.1);
  border-radius: 3px;
  border: 1px solid grey; }

#menu-search-entry, #menu-search-entry:hover, #menu-search-entry:focus {
  padding: 7px 7px;
  background-color: rgba(255,255,255,0.1);
  border: none; }

.popup-menu-item, .appmenu-category-button, .appmenu-application-button,
.menu-category-button, .menu-application-button, .menu-favorites-button,
.cinnamenu-favorites-button {  
  padding: 7px;
  spacing: 7px; }

.popup-menu-item:hover, .appmenu-category-button-selected, .appmenu-application-button-selected,
.menu-category-button-selected, .menu-application-button-selected,.menu-favorites-button:hover,
.cinnamenu-favorites-button:hover {
  padding: 7px;
  spacing: 7px;
  color: white;
  border-image: url('assets/item-normal.png') 8; }

.appmenu-sidebar-button {
  padding: 4px;
  spacing: 4px; }

.appmenu-sidebar-button:hover {
  padding: 4px;
  spacing: 4px;
  border-image: url('assets/item-normal.png') 8; }

StScrollBar StBin#vhandle {
  border-radius: 3px;
  background-color: rgba(255,255,255,0.4); }

StScrollBar StBin#vhandle:hover, StScrollBar StBin#vhandle:focus {
  border-radius: 3px;
  background-color: rgba(255,255,255,0.8); }

StScrollBar StBin#trough {
  border-radius: 4px;
  background-color: rgba(255,255,255,0.1); }

.popup-separator-menu-item {
  border: 1px solid rgba(255,255,255,0.1); }

.hover-user-icon, .user-icon {
  border: 2px solid grey;
  border-radius: 4px; }

.starkmenu-quit-dropdown-button {
  margin-top: 50px;
  border-image: url('assets/shutdown.png') 8; }

.starkmenu-quit-dropdown-button-selected {
  margin-top: 50px;
  border-image: url('assets/shutdown-hover.png') 8; }

.starkmenu-arrow-dropdown-button {
  margin-top: 50px;
  border-image: url('assets/arrow.png') 8; }

.starkmenu-arrow-dropdown-button-selected {
  margin-top: 50px;
  border-image: url('assets/arrow-hover.png') 8; }

.calendar-day-base:hover {;
  border: 1px solid grey;
  border-radius: 3px;
  background-color: rgba(255,255,255,0.1);
  border-image: none; }

.calendar-today {
  size: 110% 110%;
  border-image: url('assets/item-normal.png') 8; }

.calendar-other-month-day {
  color: grey; }

.calendar-change-month-back {
  width: 18px;
  height: 12px;
  background-image: url('assets/calendar-arrow-left.svg');
  border-radius: 4px;  border: 1px solid rgba(0,0,0,0); }

.calendar-change-month-back:rtl { 
  background-image: url('assets/calendar-arrow-right.svg'); }

.calendar-change-month-forward { 
  width: 18px;
  height: 12px;
  background-image: url('assets/calendar-arrow-right.svg');
  border-radius: 4px;  border: 1px solid rgba(0,0,0,0); }

.calendar-change-month-forward:rtl { 
  background-image: url('assets/calendar-arrow-left.svg'); }

.window-close {
  background-image: url('assets/close.svg'); }

.window-close:hover, .window-close:active {
  background-image: url('assets/close-hover.svg'); }

.workspace-add-button {
  background-image: url('assets/add-workspace.png');
  height: 200px;
  width: 35px;
  transition-duration: 300; }

.workspace-add-button:hover {
  background-image: url('assets/add-workspace-hover.png');
  transition-duration: 300; }

.expo-workspaces-name-entry, .switcher-list .item-box StLabel {
  color: white;
  padding: 5px;
  padding-bottom: 7px;
  height: 16px;
  text-align: center;
  background-gradient-start: #4b4b4b;
  background-gradient-end: #2b2b2b;
  background-gradient-direction: vertical;
  border: 1px solid grey; }

.expo-workspaces-name-entry#selected, .switcher-list .item-box:selected StLabel {
  background-color: none;
  border-image: url('assets/item-normal.png') 8; }

.window-caption {
  color: white;
  padding: 4px 4px;
  background-gradient-start: #4b4b4b;
  background-gradient-end: #2b2b2b;
  background-gradient-direction: vertical;
  border: 1px solid grey; }

.tile-preview, .tile-preview.snap, .tile-hud, .tile-hud.snap {
  border-image: url('assets/item-normal.png') 8; }

.tile-hud:top {
  border-top-width: 0px;
  border-radius: 0px 0px 8px 8px; }

.tile-hud:bottom {
  border-bottom-width: 0px;
  border-radius: 8px 8px 0px 0px; }

.tile-hud:left {
  border-left-width: 0px;
  border-radius: 0px 8px 8px 0px; }

.tile-hud:right {
  border-right-width: 0px;
  border-radius: 8px 0px 0px 8px; }

.tile-hud:top-left {
  border-top-width: 0px;
  border-left-width: 0px;
  border-radius: 0px 0px 8px 0px; }

.tile-hud:top-right {
  border-top-width: 0px;
  border-right-width: 0px;
  border-radius: 0px 0px 0px 8px; }

.tile-hud:bottom-left {
  border-bottom-width: 0px;
  border-left-width: 0px;
  border-radius: 0px 8px 0px 0px; }

.tile-hud:bottom-right {
  border-bottom-width: 0px;
  border-right-width: 0px;
  border-radius: 8px 0px 0px 0px; }

